# edax-reversi-AVX

./: NOTICE.md  README.md
android/: CMakeLists.txt  edax_jni.c
ios/: build_ios.sh
src/: bit.h  endgame.c  midgame.c  play.c  play.h  root.c  search.c  search.h  util.c  util.h
wasm/: bridge.c  build_m.sh  build_s.sh  main-thread.js  shim_log.c  shim_main.c  worker-flipsight.js  worker-flipsight_m.js
